cmake_minimum_required(VERSION 3.12)
project(Examples)

add_executable(NQueenExample n_queen_ex.cpp)
target_link_libraries(NQueenExample PRIVATE NQueen ComplexityBenchmarkUtil)

add_executable(BigDecimalMultiplicationTest big_int_test.cpp)
target_link_libraries(BigDecimalMultiplicationTest PRIVATE BigDecimalMultiplication ComplexityBenchmarkUtil)

add_executable(Kruskal kruskal.cpp)
